--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-requests
-python-dotenv
-pandas
-flask
+streamlit>=1.28.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+pandas>=2.0.0
+flask>=2.3.0
+flask-cors>=4.0.0
+numpy>=1.24.0
+plotly>=5.15.0
